--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				font-size: 14px;
 				color: black;
 				text-decoration: none;
-				text-align: center;
+				text-align: left;
 			}
 			.div1{
 				float: left;
