--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			h1{
 				text-align: center;
 				font-size: 50px;
+				color: fff;
 				background-color: green;
 				margin-top: -8px;
 				margin-bottom: 0px; 
