--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				text-align: center;
 				font-size: 50px;
 				font-color: fff;
-				background-color: green;
+				background-color: a4de02;
 				margin-top: -8px;
 				margin-bottom: 0px; 
 			}
