--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			h1{
 				text-align: center;
 				font-size: 50px;
-				font-color: fff;
-				background-color: a4de02;
+				color: fff;
+				background-color: green;
 				margin-top: -8px;
 				margin-bottom: 0px; 
 			}
@@ -39,7 +39,7 @@
 			    margin: 0px;
 			    padding: 5px;
 				font-size: 14px;
-				color: black;
+				color: white;
 				text-decoration: none;
 				text-align: left;
 			}
