--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			    margin: 0px;
 			    padding: 5px;
 				font-size: 14px;
-				color: white;
+				color: black;
 				text-decoration: none;
 				text-align: left;
 			}
