--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			h1{
 				text-align: center;
 				font-size: 50px;
-				color: fff;
-				background-color: green;
+				color: #FA2232;
+				background-color: #56f020;
 				margin-top: -8px;
 				margin-bottom: 0px; 
 			}
