--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				background-color: #996558;
 			}
 			   .lc{
-				background:linear-gradient(to right, #ea0101,#12ce1b);
+				background:linear-gradient(to right, #ff3562,greenyellow);
 			}
 			    .c{
 				background-color: greenyellow;
