--- a/detail-1-2021.html
+++ b/detail-1-2021.html
@@ -13,16 +13,19 @@
 		}
 
 		h2 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 350px;
 			margin-top: 40px;
 		}
 
 		h1 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 400px;
 		}
 
 		table {
-            margin-left: 250px;
+            /*margin-left: 250px;*/
+			margin-left: 25px;
 			
 		}
 
