--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
 				background-color: greenyellow;
 			}
 			    .b a{
-				/*text-decoration: none;
-				color: black;*/
+				/*text-decoration: none;*/
+				color: black;
 			}
 					
 				.t a{
-				 /*text-decoration: none;
-				  color: black;*/*/
+				 /*text-decoration: none;*/
+				  color: black;
 			}
 				.lc a{
-				 /*text-decoration: none;
-				  color: black;*/
+				 /*text-decoration: none;*/
+				  color: black;
 			}
 			    .i a{
 				/*text-decoration: none;*/
