--- a/detail-1-2021.html
+++ b/detail-1-2021.html
@@ -14,13 +14,13 @@
 
 		h2 {
 			/*text-align: center;*/
-			margin-left: 250px;
+			margin-left: 350px;
 			margin-top: 20px;
 		}
 
 		h1 {
 			/*text-align: center;*/
-			margin-left: 300px;
+			margin-left: 400px;
 		}
 
 		table {
@@ -38,7 +38,7 @@
 			display: inline;
 		}
 		.no{font-weight: 900;
-			color: red;
+			/*color: red;*/
 		}
 		.name{
 			font-weight: 900;
@@ -74,7 +74,7 @@
 					<td><b>Name of District</b></td>
 					<td>Cooch Behar</td>
 					<td><b>No. of Assembly</b></td>
-					<td>001</td>
+					<td class="no">001</td>
 					<td><b>Name of Assembly</b></td>
 					<td class="name">1.Mekhaligang</td>
 				</tr>
