--- a/detail-1-2021.html
+++ b/detail-1-2021.html
@@ -71,16 +71,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Cooch Behar</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td class="no">001</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">1.Mekhaligang</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -88,7 +88,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>198744</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -108,9 +108,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
+					<th>Name of<br> Party</th>
 					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
