--- a/detail-1-2021.html
+++ b/detail-1-2021.html
@@ -186,16 +186,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Cooch Behar</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>002</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">2.Mathabhanga</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -203,7 +203,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>214203</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -221,10 +221,10 @@
 
 				<tr>
 					<th>Serial <br>no.</th>
-					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br>Candidate</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -298,16 +298,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Cooch Behar</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>003</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">3.Cooch Behar (north)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -315,7 +315,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -333,10 +333,10 @@
 
 				<tr>
 					<th>Serial <br>no.</th>
-					<th>Name of Candidate</th>
-					<th>Name of Party</th>
+					<th>Name of<br> Candidate</th>
+					<th>Name of<br> Party</th>
 					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -411,16 +411,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Cooch Behar</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of <br>Assembly</b></td>
 					<td>004</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">4.Cooch Behar (South)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -428,7 +428,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>195505</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -446,10 +446,10 @@
 
 				<tr>
 					<th>Serial <br>no.</th>
-					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Candidate</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -485,7 +485,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -516,7 +516,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
