--- a/detail-5-2021.html
+++ b/detail-5-2021.html
@@ -13,24 +13,26 @@
 		}
 
 		h2 {
-			text-align: center;
-			margin-top: 50px;
+			/*text-align: center;*/
+			margin-left: 230px;
+			margin-top: 20px;
 		}
 
 		h1 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 280px;
 		}
 
 		table {
 
-			margin-left: 300px;
+			margin-left: 25px;
 		}
 
 		.assembly {
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 16px;
 			padding: 0 8px;
 			display: inline;
 		}
@@ -43,7 +45,7 @@
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 17px;
 			padding: 0 8px;
 		}
 
@@ -67,16 +69,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Darjeeling</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>023</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">23.Darjeeling</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -84,7 +86,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>168575</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -103,9 +105,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -141,7 +143,7 @@
 				<td>38240</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>Keshav Raj Sharma</td>
 				<td>GJM(Tamang)</td>
@@ -172,23 +174,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Darjeeling</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>024</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">24.Kurseong</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -196,7 +198,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>175545</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -215,9 +217,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -261,7 +263,7 @@
 				<td>57960</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>006</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -284,23 +286,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Darjeeling</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>025</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">25.Matigara-Naxalbari</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of <br>Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -308,7 +310,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>240591</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -327,9 +329,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -365,7 +367,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -396,23 +398,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of <br>District</b></td>
 					<td>Darjeeling</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>026</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">26.Siliguri</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -420,7 +422,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>178650</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -439,9 +441,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -477,7 +479,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -508,23 +510,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Darjeeling</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>027</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">27.Phansidewa</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -532,7 +534,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>207590</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -551,9 +553,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -589,7 +591,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -620,7 +622,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div>
 </body>
