--- a/detail-10-2021.html
+++ b/detail-10-2021.html
@@ -13,24 +13,27 @@
 		}
 
 		h2 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 230px;
 			margin-top: 50px;
 		}
 
 		h1 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 280px;
 		}
 
 		table {
 
-			margin-left: 300px;
+			margin-left: 25px;
+			border: 3px dashed #000; width: 50%; margin: auto; margin-top: 5%; margin-bottom: 5%; 
 		}
 
 		.assembly {
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 16px;
 			padding: 0 8px;
 			display: inline;
 		}
@@ -43,7 +46,7 @@
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 17px;
 			padding: 0 8px;
 		}
 
@@ -66,16 +69,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>077</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">77.Karimpur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -83,7 +86,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>221506</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -102,9 +105,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -140,7 +143,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -171,23 +174,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>078</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">78.Tehatta</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -195,7 +198,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>218109</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -214,9 +217,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -252,7 +255,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -283,23 +286,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>079</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">79.Palashipara</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -307,7 +310,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>203385</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -326,9 +329,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -364,7 +367,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -395,23 +398,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>080</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">80.Kaliganj</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br><br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -438,9 +441,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -476,7 +479,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -507,23 +510,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>081</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">81.Nakashipara</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of <br>Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -531,7 +534,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>209570</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -550,9 +553,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -588,7 +591,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -619,23 +622,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of <br>Assembly</b></td>
 					<td>082</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">82.Chapra</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -643,7 +646,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>213175</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -662,9 +665,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -700,7 +703,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -731,23 +734,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of <br>Assembly</b></td>
 					<td>083</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">83.Krishnanagar Uttar</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -755,7 +758,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>201805</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -774,9 +777,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -812,7 +815,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -843,23 +846,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>084</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">84.Nabadwip</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -867,7 +870,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>210589</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -886,9 +889,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -924,7 +927,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -955,23 +958,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>085</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">85.Krishnanagar Dakshin</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -979,7 +982,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>195685</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -998,9 +1001,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -1036,7 +1039,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -1067,23 +1070,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>086</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">86.Santipur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -1091,7 +1094,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>219692</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -1110,9 +1113,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -1148,7 +1151,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -1179,7 +1182,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	
@@ -1187,16 +1190,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Nadia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>087</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">87.Ranaghat(North-West)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -1204,7 +1207,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>223193</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -1223,9 +1226,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -1261,7 +1264,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -1292,7 +1295,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
