--- a/detail-10-2021.html
+++ b/detail-10-2021.html
@@ -26,7 +26,7 @@
 		table {
 
 			margin-left: 25px;
-			border: 3px dashed #000; width: 50%; margin: auto; margin-top: 5%; margin-bottom: 5%; 
+			border: 3px dashed #000; 
 		}
 
 		.assembly {
